--- a/everest.yaml
+++ b/everest.yaml
@@ -4,3 +4,8 @@
   Dependencies:
     - Name: EverestCore
       Version: 1.4673.0
+  OptionalDependencies:
+    - Name: MappingUtils
+      Version: 1.2.0
+    - Name: ImGuiHelper
+      Version: 0.1.3
